# garden-all-device

./: config.json  main.py  pyproject.toml  requirements.txt
.vim/: coc-settings.json
